deleted:    .gitattributes 	new file:   animais.html 	new file:   armas.html 	new file:   css/pages.css 	modified:   css/style.css 	new file:   gangues.html 	renamed:    css/RDR2-New-8K.jpg -> img/RDR2-New-8K.jpg 	renamed:    css/download.jfif -> img/download.jfif 	new file:   img/favicon.ico 	new file:   img/icons8-cavalo-16.png 	new file:   img/icons8-cowboy-16.png 	new file:   "img/icons8-edi\303\247\303\243o-de-mapa-16.png" 	new file:   img/icons8-gang-16.png 	new file:   img/icons8-gun-16.png 	new file:   img/icons8-red-hat-16.png 	new file:   mapa.html 	new file:   personagens.html 	modified:   rd2.html

--- a/rd2.html
+++ b/rd2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Red Dead Redemption 2</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <style>
         @import url('http://fonts.cdnfonts.com/css/chinese-rocks');
 </style>
@@ -20,12 +21,12 @@
         <div class="cabecalho">
             <h1>Red Dead Redemption II</h1>
             <ul>
-                <li>Gangues</li>
-                <li>Armas</li>
-                <li>Mapa</li>
-                <li>Personagens</li>
-                <li>Animais</li>
-                <li>Home</li>
+                <li> <a target="_blank" class="links" href="animais.html">Animais</a></li>
+                <li><a target="_blank" class="links" href="armas.html">Armas </a></li>
+                <li><a target="_blank" class="links" href="gangues.html">Gangues</a></li>
+                <li><a target="_blank" class="links" href="mapa.html">Mapa</a></li>
+                <li><a target="_blank" class="links" href="personagens.html">Personagens</a></li>
+                <li><a target="_blank" class="links" href="google.com">Home</a></li>
                 <li></li>
             </ul>
         </div>
