modified:   armas.html 	modified:   css/pages.css 	modified:   css/style.css 	new file:   img/806459.webp 	new file:   img/977202.jpg 	new file:   img/Red-Dead-Redemption-2-weapons-Rockstar-1031108.jpg 	modified:   rd2.html

--- a/rd2.html
+++ b/rd2.html
@@ -33,17 +33,10 @@
     </header>
 
     <!-- Corpo -->
-    <div class="main-class">
         <div class="container">
             <h2>SINOPSE</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde veniam eius vero facilis, beatae rem consequuntur adipisci facere quidem temporibus quod illum fuga sunt accusamus. Autem exercitationem minima deserunt tempora!</p>
+            <p>Em 1899, Red Dead Redemption 2 segue a história de Arthur Morgan, um membro da guangue de bandidos de Dutch Van der Linde. Depois de tudo dar errado durante um roubo em uma cidade do oeste chamada Blackwater, Arthur Morgan e a gangue Van der Linde são forçados a fugir.</p>
         </div>
-        <div class="container">
-            <h2>SINOPSE</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde veniam eius vero facilis, beatae rem consequuntur adipisci facere quidem temporibus quod illum fuga sunt accusamus. Autem exercitationem minima deserunt tempora!</p>
-
-         </div>
-    </div>
     
     <!-- Footer / Cabeçalho-->
 
