modified:   armas.html 	renamed:    css/pages.css -> css/armas.css 	modified:   css/style.css 	modified:   rd2.html

--- a/rd2.html
+++ b/rd2.html
@@ -17,16 +17,15 @@
     
     <!-- Cabeçalho-->
 
-    <header>
+    <header>    
         <div class="cabecalho">
             <h1>Red Dead Redemption II</h1>
             <ul>
-                <li> <a target="_blank" class="links" href="animais.html">Animais</a></li>
                 <li><a target="_blank" class="links" href="armas.html">Armas </a></li>
                 <li><a target="_blank" class="links" href="gangues.html">Gangues</a></li>
                 <li><a target="_blank" class="links" href="mapa.html">Mapa</a></li>
                 <li><a target="_blank" class="links" href="personagens.html">Personagens</a></li>
-                <li><a target="_blank" class="links" href="google.com">Home</a></li>
+                <li><a target="_blank" class="links" href="rd2.html">Home</a></li>
                 <li></li>
             </ul>
         </div>
