--- a/armas.html
+++ b/armas.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Armas</title>
-    <link rel="stylesheet" href="css/pages.css">
+    <link rel="stylesheet" href="css/armas.css">
     <link rel="shortcut icon" href="img/icons8-gun-16.png" type="image/x-icon">
     <style>
         @import url('http://fonts.cdnfonts.com/css/chinese-rocks');
@@ -19,7 +19,7 @@
         </div>
     </header>
 
-    <div class="conteiner-armas">
+    <div class="armas1">
         <h2>Volcanic Pistol</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit itaque doloribus incidunt nesciunt, obcaecati fuga voluptatibus similique. Facere praesentium, ad totam rem rerum similique, eius consectetur omnis unde perspiciatis laborum.</p>
         
