modified:   armas.html 	modified:   css/pages.css 	deleted:    img/Red-Dead-Redemption-2-weapons-Rockstar-1031108.jpg 	new file:   img/card-pistola.jpg 	new file:   img/card-revolver.jpg 	new file:   img/card-rifle.jpg 	new file:   img/card-sawnoff.jpg 	deleted:    img/download.jfif 	new file:   img/jornal-pistola.jpg 	new file:   img/jornal-revolver.jpg 	new file:   img/jornal-rifle.jpg 	new file:   img/jornal-sawnoff.jpg 	new file:   img/mapa-red-dead-redemption-2-1024x770.jpg.webp 	new file:   img/smoke.jpg 	modified:   mapa.html 	modified:   personagens.html

--- a/mapa.html
+++ b/mapa.html
@@ -19,6 +19,11 @@
         </div>
     </header>
 
+        <div class="mapa">
+            <img src="img/mapa-red-dead-redemption-2-1024x770.jpg.webp" alt="">
+    
+        </div>
+
     
 </body>
 </html>
